--- a/client/src/locales/pt/translation.json
+++ b/client/src/locales/pt/translation.json
@@ -16,5 +16,10 @@
   "rewardsProgram": "Programa de Recompensas",
   "freeShippingMessage": "ENVIO GRÁTIS PARA {{location}} EM TODAS AS ENCOMENDAS ACIMA DE 35€",
   "illustration": "Ilustração",
-  "products": "Produtos"
+  "products": "Produtos",
+  "animals": "Animais",
+  "family": "Família",
+  "illustrations": "Ilustrações",
+  "lovers": "Namorados"
+
 }
